Modified config parsing

--- a/configs/supervisord.conf
+++ b/configs/supervisord.conf
@@ -9,18 +9,19 @@ minfds=1024                                     ; number of startup file descrip
 minprocs=200                                    ; number of process descriptors
 user=root                                       ; default user
 childlogdir=/var/log/                           ; where child log files will live
+umask=022                                        ; process file creation umask
 
-[inet_http_server]
-port=127.0.0.1:9001
+# [inet_http_server]
+# port=127.0.0.1:9001
 
 [program:matt_daemon]
-command="cat"
+command=1
 numprocs=1
-stopsignal=a
+stopsignal=34
 autostart=true
 startsecs=-2
-autorestart=false
+stopwaitsecs=-2
 exitcodes=0
-user=root
-stderr_logfile=/var/log/matt_daemon-stderr.log
+user=test
+stderr_logfile=/var/log
 stdout_logfile=/var/log/matt_daemon-stdout.log
