Added loop over programs in main

--- a/configs/taskmasterd.yaml
+++ b/configs/taskmasterd.yaml
@@ -1,9 +1,8 @@
 programs:
-    nginx:
-        cmd: "/usr/local/bin/nginx -c /etc/nginx/test.conf"
+    test:
+        cmd: "tail -f"
         numprocs: 1
         umask: 022
-        workingdir: /tmp
         autostart: true
         autorestart: always
         exitcodes:
@@ -13,24 +12,9 @@ programs:
         startsecs: 5
         stopsignal: 34
         stopsecs: 10
-        stdout_logfile: /tmp/nginx.stdout
-        stderr_logfile: /tmp/nginx.stderr
         user: jlefonde
         env:
             STARTED_BY: taskmaster
             ANSWER: 42
-    test1:
-        cmd: "test1"
-        autorestart: "always"
     test2:
-        cmd: "test2"
-        autorestart: "never"
-        stopsignal: INT
-    test3:
-        cmd: "test3"
-        autorestart: on-failure
-        stopsignal: SIGINT
-    test4:
-        cmd: "test4"
-        stopsignal: TERM
-
+        cmd: "cat"
