--- a/configs/supervisord.conf
+++ b/configs/supervisord.conf
@@ -9,19 +9,18 @@ minfds=1024                                     ; number of startup file descrip
 minprocs=200                                    ; number of process descriptors
 user=root                                       ; default user
 childlogdir=/var/log/                           ; where child log files will live
-umask=022                                        ; process file creation umask
 
-# [inet_http_server]
-# port=127.0.0.1:9001
+[inet_http_server]
+port=127.0.0.1:9001
 
 [program:matt_daemon]
-command=1
+command=tail -f
 numprocs=1
-stopsignal=34
+stopsignal=TERM
 autostart=true
 startsecs=-2
 stopwaitsecs=-2
 exitcodes=0
-user=test
-stderr_logfile=/var/log
+user=root
+stderr_logfile=/var/log/matt_daemon-stderr.log
 stdout_logfile=/var/log/matt_daemon-stdout.log
