--- a/configs/taskmasterd.yaml
+++ b/configs/taskmasterd.yaml
@@ -1,6 +1,6 @@
 programs:
     test:
-        cmd: "tail -f"
+        cmd: tail -f
         numprocs: 1
         umask: 022
         autostart: true
