Added supervisor and logger packages

--- a/configs/supervisord.conf
+++ b/configs/supervisord.conf
@@ -13,14 +13,12 @@ childlogdir=/var/log/                           ; where child log files will liv
 [inet_http_server]
 port=127.0.0.1:9001
 
-[program:matt_daemon]
+[program:test]
 command=tail -f
 numprocs=1
-stopsignal=TERM
+stopsignal=USR1
 autostart=true
 startsecs=-2
 stopwaitsecs=-2
 exitcodes=0
 user=root
-stderr_logfile=/var/log/matt_daemon-stderr.log
-stdout_logfile=/var/log/matt_daemon-stdout.log
