--- a/configs/supervisord.conf
+++ b/configs/supervisord.conf
@@ -1,24 +1,21 @@
 [supervisord]
-logfile=/var/log/supervisord.log                ; supervisord log file
-logfile_maxbytes=50MB                           ; maximum size of logfile before rotation
-logfile_backups=10                              ; number of backed up logfiles
+logfile=/var/log/supervisord/supervisord.log                ; supervisord log file
 loglevel=error                                  ; info, debug, warn, trace
 pidfile=/var/run/supervisord.pid                ; pidfile location
-nodaemon=false                                  ; run supervisord as a daemon
-minfds=1024                                     ; number of startup file descriptors
-minprocs=200                                    ; number of process descriptors
-user=root                                       ; default user
-childlogdir=/var/log/                           ; where child log files will live
+nodaemon=true                                  ; run supervisord as a daemon
+childlogdir=/var/log/supervisord/                           ; where child log files will live
+user=root
 
 [inet_http_server]
 port=127.0.0.1:9001
 
 [program:test]
+process_name=%(program_name)s_%(process_num)02d
 command=tail -f
-numprocs=1
+numprocs=2
 stopsignal=USR1
 autostart=true
 startsecs=-2
 stopwaitsecs=-2
 exitcodes=0
-user=root
+user=jlefonde
