Added processes map in manager

--- a/configs/supervisord.conf
+++ b/configs/supervisord.conf
@@ -14,7 +14,7 @@ process_name=%(program_name)s_%(process_num)02d
 command=tail -f
 numprocs=2
 stopsignal=USR1
-autostart=true
+autostart=false
 startsecs=-2
 stopwaitsecs=-2
 exitcodes=0
