Added backoff func

--- a/configs/supervisord.conf
+++ b/configs/supervisord.conf
@@ -1,20 +1,21 @@
 [supervisord]
 logfile=/var/log/supervisord/supervisord.log                ; supervisord log file
-loglevel=error                                  ; info, debug, warn, trace
+loglevel=trace                                  ; info, debug, warn, trace
 pidfile=/var/run/supervisord.pid                ; pidfile location
 nodaemon=true                                  ; run supervisord as a daemon
 childlogdir=/var/log/supervisord/                           ; where child log files will live
 user=root
 
-[inet_http_server]
-port=127.0.0.1:9001
+# [inet_http_server]
+# port=127.0.0.1:9001
 
 [program:test]
 process_name=%(program_name)s_%(process_num)02d
-command=tail -f
+command=shs
 numprocs=2
+startretries=3
 stopsignal=USR1
-autostart=false
+autostart=true
 startsecs=-2
 stopwaitsecs=-2
 exitcodes=0
