--- a/configs/taskmasterd.yaml
+++ b/configs/taskmasterd.yaml
@@ -5,20 +5,23 @@ taskmasterd:
     logfile: /var/log/taskmasterd/taskmasterd.log
     loglevel: error
 programs:
+    # test:
+    #     cmd: echo "test"
+    #     numprocs: 2
+    #     autostart: true
+    #     autorestart: always
+    #     exitcodes:
+    #         - 0
+    #         - 2
+    #     startretries: 3
+    #     startsecs: 5
+    #     stopsignal: 34
+    #     stopsecs: 10
+    #     user: jlefonde
+    #     env:
+    #         STARTED_BY: taskmaster
+    #         ANSWER: 42
+    #     stderr_logfile: auto
     test:
-        cmd: echo "test"
+        cmd: "unknown_command"
         numprocs: 2
-        autostart: true
-        autorestart: always
-        exitcodes:
-            - 0
-            - 2
-        startretries: 3
-        startsecs: 5
-        stopsignal: 34
-        stopsecs: 10
-        user: jlefonde
-        env:
-            STARTED_BY: taskmaster
-            ANSWER: 42
-        stderr_logfile: auto
