Modified program manager loop and log files for each process

--- a/configs/supervisord.conf
+++ b/configs/supervisord.conf
@@ -9,14 +9,13 @@ user=root
 # [inet_http_server]
 # port=127.0.0.1:9001
 
-[program:test]
-process_name=%(program_name)s_%(process_num)02d
-command=shs
-numprocs=2
+[program:retries]
+command=echo "test"
+numprocs=1
 startretries=3
 stopsignal=USR1
 autostart=true
-startsecs=-2
-stopwaitsecs=-2
-exitcodes=0
+exitcodes=1
+stopwaitsecs=0
+startsecs=0
 user=jlefonde
