--- a/configs/taskmasterd.yaml
+++ b/configs/taskmasterd.yaml
@@ -7,7 +7,7 @@ taskmasterd:
 programs:
     tail:
         cmd: tail -f
-        numprocs: 2
+        numprocs: 1
         autostart: true
         autorestart: always
         exitcodes:
@@ -15,15 +15,15 @@ programs:
             - 2
         startretries: 3
         startsecs: 5
-        stopsignal: 34
-        stopsecs: 10
+        stopsignal: TERM
+        stopsecs: 1
         user: jlefonde
         env:
             STARTED_BY: taskmaster
             ANSWER: 42
         stderr_logfile: auto
-    echo:
-        cmd: echo "test"
-        exitcodes: 1
-        startsecs: 0
-        autorestart: never
+    # echo:
+    #     cmd: echo "test"
+    #     exitcodes: 1
+    #     startsecs: 0
+    #     autorestart: never
