Added readline package

--- a/configs/supervisord.conf
+++ b/configs/supervisord.conf
@@ -9,13 +9,13 @@ user=root
 # [inet_http_server]
 # port=127.0.0.1:9001
 
-[program:retries]
-command=echo "test"
+[program:tail]
+command=tail -f
 numprocs=1
 startretries=3
-stopsignal=USR1
+stopsignal=TeRM
 autostart=true
-exitcodes=1
-stopwaitsecs=0
-startsecs=0
+exitcodes=0
+stopwaitsecs=2
+startsecs=2
 user=jlefonde
