--- a/configs/supervisord.conf
+++ b/configs/supervisord.conf
@@ -6,12 +6,16 @@ nodaemon=true                                  ; run supervisord as a daemon
 childlogdir=/var/log/supervisord/                           ; where child log files will live
 user=root
 
-# [inet_http_server]
-# port=127.0.0.1:9001
+[inet_http_server]
+port=127.0.0.1:9001
+
+[rpcinterface:supervisor]
+supervisor.rpcinterface_factory = supervisor.rpcinterface:make_main_rpcinterface
 
 [program:tail]
 command=tail -f
-numprocs=1
+process_name=%(program_name)s_%(process_num)02d
+numprocs=2
 startretries=3
 stopsignal=TeRM
 autostart=true
@@ -19,3 +23,9 @@ exitcodes=0
 stopwaitsecs=2
 startsecs=2
 user=jlefonde
+
+[program:echo]
+command=echo "test"
+exitcodes=1
+startsecs=0
+autorestart=false
