Added test program

--- a/configs/supervisord.conf
+++ b/configs/supervisord.conf
@@ -21,11 +21,17 @@ stopsignal=TeRM
 autostart=true
 exitcodes=0
 stopwaitsecs=2
-startsecs=2
+startsecs=5
 user=jlefonde
 
 [program:echo]
 command=echo "test"
 exitcodes=1
-startsecs=0
+startsecs=1
 autorestart=false
+
+[program:test]
+command=/home/jlefonde/Documents/taskmaster/test
+environment=TEST="123"
+stopwaitsecs=5
+stopsignal=USR1
