Added color based on loglevel to logfile

--- a/configs/taskmasterd.yaml
+++ b/configs/taskmasterd.yaml
@@ -3,7 +3,7 @@ taskmasterd:
     nocleanup: false
     childlogdir: /var/log/taskmasterd/
     logfile: /var/log/taskmasterd/taskmasterd.log
-    loglevel: error
+    loglevel: critical
 programs:
     tail:
         cmd: tail -f
