Added detailled log messages

--- a/configs/supervisord.conf
+++ b/configs/supervisord.conf
@@ -4,7 +4,6 @@ loglevel=trace                                  ; info, debug, warn, trace
 pidfile=/var/run/supervisord.pid                ; pidfile location
 nodaemon=true                                  ; run supervisord as a daemon
 childlogdir=/var/log/supervisord/                           ; where child log files will live
-user=root
 
 [inet_http_server]
 port=127.0.0.1:9001
@@ -17,12 +16,15 @@ command=tail -f
 process_name=%(program_name)s_%(process_num)02d
 numprocs=2
 startretries=3
-stopsignal=TeRM
+stopsignal=TERM
 autostart=true
-exitcodes=0
+autorestart=true
+exitcodes=0,2
 stopwaitsecs=2
 startsecs=5
 user=jlefonde
+environment=STARTED_BY="taskmaster",ANSWER="42"
+stderr_logfile=AUTO
 
 [program:echo]
 command=echo "test"
@@ -33,5 +35,5 @@ autorestart=false
 [program:test]
 command=/home/jlefonde/Documents/test
 environment=TEST="123"
-stopwaitsecs=5
+stopwaitsecs=2
 stopsignal=USR1
