Added pid request

--- a/configs/supervisord.conf
+++ b/configs/supervisord.conf
@@ -11,26 +11,26 @@ port=127.0.0.1:9001
 [rpcinterface:supervisor]
 supervisor.rpcinterface_factory = supervisor.rpcinterface:make_main_rpcinterface
 
-# [program:tail]
-# command=tail -f
-# process_name=%(program_name)s_%(process_num)02d
-# numprocs=2
-# startretries=3
-# stopsignal=TERM
-# autostart=true
-# autorestart=true
-# exitcodes=0,2
-# stopwaitsecs=2
-# startsecs=5
-# user=jlefonde
-# environment=STARTED_BY="taskmaster",ANSWER="42"
-# stderr_logfile=AUTO
+[program:tail]
+command=tail -f
+process_name=%(program_name)s_%(process_num)02d
+numprocs=2
+startretries=3
+stopsignal=TERM
+autostart=true
+autorestart=true
+exitcodes=0,2
+stopwaitsecs=2
+startsecs=5
+user=jlefonde
+environment=STARTED_BY="taskmaster",ANSWER="42"
+stderr_logfile=AUTO
 
-# [program:echo]
-# command=echo "test"
-# exitcodes=1
-# startsecs=1
-# autorestart=false
+[program:echo]
+command=echo "test"
+exitcodes=1
+startsecs=1
+autorestart=false
 
 [program:test]
 command=/home/jlefonde/Documents/test
