--- a/configs/supervisord.conf
+++ b/configs/supervisord.conf
@@ -1,9 +1,9 @@
 [supervisord]
-logfile=/var/log/supervisord/supervisord.log                ; supervisord log file
-loglevel=trace                                  ; info, debug, warn, trace
-pidfile=/var/run/supervisord.pid                ; pidfile location
-nodaemon=true                                  ; run supervisord as a daemon
-childlogdir=/var/log/supervisord/                           ; where child log files will live
+logfile=/var/log/supervisord/supervisord.log
+loglevel=trace
+pidfile=/var/run/supervisord.pid
+nodaemon=true
+childlogdir=/var/log/supervisord/
 
 [inet_http_server]
 port=127.0.0.1:9001
@@ -15,15 +15,14 @@ supervisor.rpcinterface_factory = supervisor.rpcinterface:make_main_rpcinterface
 command=tail -f
 process_name=%(program_name)s_%(process_num)02d
 numprocs=2
-startretries=3
-stopsignal=TERM
 autostart=true
 autorestart=true
 exitcodes=0,2
-stopwaitsecs=2
+startretries=3
 startsecs=5
+stopsignal=TERM
+stopwaitsecs=2
 user=jlefonde
-environment=STARTED_BY="taskmaster",ANSWER="42"
 stderr_logfile=AUTO
 
 [program:echo]
@@ -31,9 +30,3 @@ command=echo "test"
 exitcodes=1
 startsecs=1
 autorestart=false
-
-[program:test]
-command=/home/jlefonde/Documents/test
-environment=TEST="1234"
-stopwaitsecs=2
-stopsignal=USR1
